--- a/style.scss
+++ b/style.scss
@@ -136,7 +136,7 @@
 //     .container{
 //         padding: 0 1rem;
 //     }
-//     .head{
+//     #head{
 //         align-items: center;
 //         justify-content: space-between;
 //         display: flex;
